--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
-  - '0.10'
-  
+- '0.10'
+deploy:
+  provider: npm
+  email: YOUR EMAIL ADDRESS
+  api_key:
+    secure: Pu74+OVhLBIwgB8i2/k46XpSdYbtFccRdkZvSMTP3sbHgJvvlq/8KN9iWgnqi6kXE1e9vWM5Ru0oSS1+qtGPrHWy2f4ZRml+RJ1G0vVvRBAO9U7XsKiOVtRTJaTNQnCZONnDSCV3Q853T8mEYC/g3PcEGbfmsMhz21Dr0iNQBLA=
+  on:
+    tags: true
