--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslint-teamcity-reporter",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "A TSLint formatter/reporter for use in TeamCity which groups by files using TeamCity Test Suite",
   "main": "index.js",
   "scripts": {
@@ -26,11 +26,10 @@
   },
   "homepage": "https://github.com/ThaNarie/tslint-teamcity-reporter",
   "devDependencies": {
-	  "grunt-cli": "0.1.9",
-	  "grunt": "~0.4.1",
-	  "grunt-tslint": "~0.4.0",
+	  "grunt-cli": "~0.1.13",
+	  "grunt": "~0.4.5",
+	  "grunt-tslint": "~3.0.1",
 	  "grunt-contrib-jshint": "0.6.4",
-	  "tslint-teamcity-reporter": "0.1.4",
 	  "grunt-run-grunt": "~0.1.0",
 	  "grunt-mocha-test": "~0.7.0",
 	  "grunt-contrib-clean": "~0.5.0",
