Turn on babel-plugin polyfill to support node 6

--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,7 @@
   "plugins": [
     ["@babel/plugin-transform-runtime", {
       "helpers": true,
-      "polyfill": false,
+      "polyfill": true,
       "regenerator": false,
       "moduleName": "@babel/runtime"
     }]
