--- a/.babelrc
+++ b/.babelrc
@@ -8,16 +8,19 @@
       "loose": true,
       "useBuiltIns": false
     }],
-    "@babel/preset-stage-3",
     "@babel/typescript"
   ],
   "plugins": [
     ["@babel/plugin-transform-runtime", {
       "helpers": true,
-      "polyfill": true,
-      "regenerator": false,
-      "moduleName": "@babel/runtime"
-    }]
+      "corejs": 2,
+      "regenerator": false
+    }],
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    ["@babel/plugin-proposal-class-properties", { "loose": false }],
+    "@babel/plugin-proposal-json-strings"
+
   ],
   "env": {
     "test": {
