--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslint-teamcity-reporter",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "A TSLint formatter/reporter for use in TeamCity which groups by files using TeamCity Test Suite",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -59,13 +59,17 @@
     "url": "https://github.com/ThaNarie/tslint-teamcity-reporter.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.35",
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
-    "@babel/preset-stage-3": "^7.0.0-beta.35",
-    "@babel/preset-typescript": "^7.0.0-beta.35",
-    "@babel/register": "^7.0.0-beta.35",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-stage-3": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@babel/register": "^7.0.0",
     "@types/chai": "^4.0.10",
     "@types/mocha": "^2.2.44",
     "@types/sinon": "^4.1.2",
@@ -101,6 +105,6 @@
     "typescript": "^2.6.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.35"
+    "@babel/runtime-corejs2": "^7.1.5"
   }
 }
